修复bug  private static final boolean checkDict(final String path) {
        final byte[] bytes = path.getBytes();
        Log.e("bytes",String.valueOf(bytes.length));
        Log.e("path",path);
         int code = EXOCREngine.nativeInit(bytes);
        Log.e("kalu", "checkDict ==> code = " + code);
        if(code!=0){
            new Thread(){
                @Override
                public void run() {
                    EXOCRDict.checkDict(path);
                }
            }.start();
        }
        return true;

    }

--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -14,6 +14,12 @@ allprojects {
         google()
         jcenter()
     }
+
+    tasks.withType(Javadoc) {//防止编码问题
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+        options.addStringOption('charSet', 'UTF-8')
+    }
 }
 
 rootProject.buildDir = '../build'
