--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,12 @@ rootProject.allprojects {
         google()
         jcenter()
     }
+
+    tasks.withType(Javadoc) {//防止编码问题
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+        options.addStringOption('charSet', 'UTF-8')
+    }
 }
 
 apply plugin: 'com.android.library'
@@ -26,13 +32,44 @@ android {
 
     defaultConfig {
         minSdkVersion 16
+
+        ndk {
+            abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+        }
+
     }
     lintOptions {
         disable 'InvalidPackage'
     }
+
+    sourceSets {
+        main.jniLibs.srcDir 'libs'
+    }
+
+    packagingOptions {
+        merge 'res/values/values.xml'
+        merge 'AndroidManifest.xml'
+        merge 'R.txt'
+        merge 'classes.jar'
+    }
+
+    buildTypes {
+        release {
+            consumerProguardFiles "proguard-rules.pro"
+        }
+    }
+
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
 }
 dependencies {
-    implementation 'com.shouzhong:Scanner:1.1.3'
-    // 身份证识别
-    implementation 'com.shouzhong:ScannerIdCardLib:1.0.4'
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+//    implementation 'com.shouzhong:Scanner:1.1.3'
+//     身份证识别
+//    implementation 'com.shouzhong:ScannerIdCardLib:1.0.4'
+//    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
