--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity
             android:name=".ScannerActivity"
             android:configChanges="orientation"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" /> />
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+
     </application>
 </manifest>
